删除无用测试代码，修正文档错误

--- a/__tests__/html/observer/file.html
+++ b/__tests__/html/observer/file.html
@@ -26,8 +26,8 @@
   class CSVParser {
 
     /**
-     * @param {number} [separator] separated of content
-     * @param {number} [quotation] mark of content quotes
+     * @param {Number} [separator] separated of content
+     * @param {Number} [quotation] mark of content quotes
      */
     constructor (separator, quotation) {
       this.separator = separator || SEPARATOR.Comma
