--- a/__tests__/html/observer/file.html
+++ b/__tests__/html/observer/file.html
@@ -41,7 +41,7 @@
      *
      * @example
      * ```JavaScript
-     * parse_line([110,97,109,101,45,48,44,110,97,109,101,45,49])
+     * parse([110,97,109,101,45,48,44,110,97,109,101,45,49])
      * // output
      * [
      *   [110,97,109,101,45,48],
@@ -49,7 +49,7 @@
      * ]
      * ```
      */
-    parse_line (array) {
+    parse (array) {
       const separator = this.separator
       const quotation = this.quotation
       const length = array.byteLength
@@ -104,7 +104,7 @@
 
   const parse = new CSVParser()
   const buf = new Uint8Array([1, SEPARATOR.Comma, 2, SEPARATOR.Comma, 3, SEPARATOR.Comma])
-  const result = parse.parse_line(buf)
+  const result = parse.parse(buf)
   console.log(result)
 </script>
 </body>
